corrigido bug scroll bar, estilizado scrollbar

--- a/components/header/Header.css
+++ b/components/header/Header.css
@@ -5,9 +5,6 @@
   justify-content: space-between;
   align-items: center;
   padding: 20px 80px;
-  position: sticky;
-  top: 0;
-  width: 100vw;
 }
 
 .header__logo__text {
